--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -254,7 +254,8 @@ services:
     # https://hub.docker.com/r/storjlabs/storagenode
     image: storjlabs/storagenode
     ports:
-      - 28967:28967
+      - 28967:28967/tcp
+      - 28967:28967/udp
       - 127.0.0.1:14002:14002
     environment:
       - WALLET=YOUR_STORJ_PAYOUT_ADDRESS_HERE
