doc: fix instruction for ipfs webui
fixes #6

Signed-off-by: thiswillbeyourgithub <26625900+thiswillbeyourgithub@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -226,8 +226,7 @@ services:
 ### Distribued storage projects
   
   ipfs:
-    # Make sure to pin some files you want to host for others using the web UI
-    #   http://127.0.0.1:5001
+    # Make sure to pin some files you want to host for others using the web UI at http://127.0.0.1:5001/webui
     # https://ipfs.io
     # https://docs.ipfs.tech/install/run-ipfs-inside-docker/
     # https://hub.docker.com/r/ipfs/kubo/
