doc: add link for i2p port doc
Signed-off-by: thiswillbeyourgithub <26625900+thiswillbeyourgithub@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
     # https://hub.docker.com/r/divax/i2p
     image: divax/i2p:current
     ports:
+      # Details of each port can be found at https://geti2p.net/en/docs/ports
       - 7070:7070
       - 4444:4444
       - 4445:4445
